# mcuboot_adventures

./: CMakeLists.txt  README.md  VERSION  app.overlay  lfs.conf  mcuboot-app.conf  prj.conf  shell.conf  sysbuild.conf
satnogs_comms/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  revision.cmake  satnogs_comms.dts  satnogs_comms.yaml  satnogs_comms_0_2_0.conf  satnogs_comms_0_2_0.overlay  satnogs_comms_0_3_0.conf  satnogs_comms_0_3_0.overlay  satnogs_comms_defconfig
src/: gpio_shell.c  lfs_shell.c  main.c  mcuboot_shell.c
sysbuild/: flash.overlay  lfs_sd.overlay  mcuboot.conf  mcuboot.overlay
